SERVER-23762 validate() should fail when encountering invalid BSON

(cherry picked from commit ce39e32d01e3a909948f850360040809ac7c8a8d)
(cherry picked from commit 5089357158122b3c8b2c146210ac15fe9451c21c)